# proj-PINEM

./: .gitignore  .gitmodules  error.txt  output.txt  pyproject.toml
PINEM_tests/: error.txt  output.txt
PINEM_tests/config/: savepaths.py  t240515_1.py  t240520_ForMC.py  t240605.py
PINEM_tests/couplingProfiles/: photonsEnveloped.py  photonsPlaneWaved.py
PINEM_tests/initial_states/: coherent_alpha_0_5.py
PINEM_tests/job_submission_scripts/: submit.sh
PINEM_tests/mpi_scripts/: MPI_2cav.py  MPI_nDHist_CalcLikelihood.py
PINEM_tests/processors/: OpenAndPlot.ipynb  nDHist_Plotter.ipynb
cluster/job_submission_scripts/: fullSimSubmit.sh  submit.sh
cluster/mpi_scripts/: MPI_2cav.py  MPI_nDHist_CalcLikelihood.py  MPI_nDHist_CalcProbDens.py  MPI_nDHist_Gen.py
src/PINEM/PINEM/: PINEM.py
src/PINEM/config/: t240520_Enveloped.py  t241031.py
src/PINEM/initial_states/: 2modeSqueeze_.py
src/PINEM/waveguides/: Kfir.py
